[package]
name = "gps-server"
version = "0.1.0"
authors = ["Vicent Selfa <vtselfa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rust_decimal = "1.8.1"
thiserror = "1.0.22"
chrono = "0.4"
paste = "1.0.4"
serde-xml-rs = "0.4.0"
rocket = "0.4.5"
regex = "1.4.2"
rusty-money = "0.3.5"
roxmltree = "^0.10.0"
log = "^0.4.8"
log4rs = "^0.11.0"
Inflector = "^0.11.4"
yaserde = "^0.4.2"
yaserde_derive = "^0.4.2"
clap = "^2.33.0"
xml-rs = "^0.8.0"
gps_lib = { path = "sub_crates/gps_lib" }

[workspace]
members = [
    "sub_crates/gps_lib",
]
