[package]
name = "gps-server"
version = "0.1.0"
authors = ["Vicent Selfa <vtselfa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono         = { version = "0.4",features = ["serde"] }
clap           = "^2.33.0"
Inflector      = "^0.11.4"
lazy_static    = "^1.4.0"
log            = "^0.4.8"
log4rs         = "^0.11.0"
paste          = "1.0.4"
rand           = "0.7.3"
regex          = "1.4.2"
rocket         = "0.4.5"
roxmltree      = "^0.10.0"
rust_decimal   = "1.8.1"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
thiserror      = "1.0.22"
xml-rs         = "^0.8.0"
yaserde        = "^0.4.2"
yaserde_derive = "^0.4.2"

gps_lib = { path = "sub_crates/gps_lib" }

[workspace]
members = [
    "sub_crates/gps_lib",
]
